--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -424,7 +424,7 @@
   position: absolute;
   top: 20px;
   right: 20px;
-  z-index: 100;
+  z-index: 50;
   padding: 10px;
   background: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(10px);
